--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	</properties>
 	<modules>
 		<module>billboard-rest</module>
+                 <module>billboard-client</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
